--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,5 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
-
-// Variables
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700');
 @import 'variables';
-
-// Bootstrap
+@import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~bootstrap/scss/bootstrap';
+@import '~admin-lte/dist/css/adminlte.min.css';
