--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,4 +2,4 @@
 @import 'variables';
 @import '~@fortawesome/fontawesome-free/css/all.css';
 @import '~bootstrap/scss/bootstrap';
-@import '~admin-lte/dist/css/adminlte.min.css';
+@import '~admin-lte/build/scss/AdminLTE.scss';
